--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ commands:
       - run: npm run test
   deploy:
     steps:
+      - run: npm i -g aws-cdk
       - run: cdk deploy --require-approval never
 
 jobs:
@@ -39,7 +40,6 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - npm i -g aws-cdk
       - deploy
 
 workflows:
