--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 version: 2.1
 
 orbs:
-  aws-cli: circleci/aws-cli@4.1.2
+  aws-cli: circleci/aws-cli@2.0.3
 
 commands:
   build:
@@ -36,7 +36,7 @@ jobs:
       - test
 
   deploy:
-    executor: aws-cli/default
+    executor: aws-cli
     steps:
       - attach_workspace:
           at: .
