Revert image version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ commands:
       - run: npm run test
   deploy:
     steps:
+      - run: npm i aws-cdk
       - run: cdk deploy --require-approval never
 
 jobs:
