--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@types/aws-lambda": "^8.10.133",
     "constructs": "^10.0.0",
+    "esbuild": "^0.20.0",
     "source-map-support": "^0.5.21"
   }
 }
