--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.133",
+    "axios": "^1.6.7",
     "constructs": "^10.0.0",
+    "md5-hex": "^5.0.0",
     "source-map-support": "^0.5.21"
   }
 }
