--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "20.11.14",
-    "aws-cdk": "2.126.0",
+    "aws-cdk": "^2.128.0",
     "aws-cdk-lib": "2.126.0",
     "aws-sdk": "^2.1554.0",
     "esbuild": "^0.20.0",
